# phxbody_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-pages.yml
app/: crud.py  db.py  main.py  models.py  schemas.py
app/static/: app.js  config.js  index.html
scripts/: setup_github_pages.sh
